Add support for FFmpeg version 5.1

Pick-to: 6.4
Fixes: QTBUG-105819
Change-Id: Ib81afd95047af64d2e08f054fed1230acde7395f
Reviewed-by: Lars Knoll <lars@knoll.priv.no>