src/plugins/multimedia/ffmpeg/qffmpeg_p.h
@@ -14,6 +14,8 @@ extern "C" {
 #include <libswscale/swscale.h>
 }
 
+#define QT_FFMPEG_OLD_CHANNEL_LAYOUT (LIBAVCODEC_VERSION_INT < AV_VERSION_INT(59,24,100))
+
 QT_BEGIN_NAMESPACE
 
 namespace QFFmpeg
