src/plugins/multimedia/ffmpeg/qffmpegmediaformatinfo.cpp
@@ -500,11 +500,17 @@ QAudioFormat QFFmpegMediaFormatInfo::audioFormatFromCodecParameters(AVCodecParam
     QAudioFormat format;
     format.setSampleFormat(sampleFormat(AVSampleFormat(codecpar->format)));
     format.setSampleRate(codecpar->sample_rate);
-
-    auto channelLayout = codecpar->channel_layout;
+#if QT_FFMPEG_OLD_CHANNEL_LAYOUT
+    uint64_t channelLayout = codecpar->channel_layout;
     if (!channelLayout)
         channelLayout = avChannelLayout(QAudioFormat::defaultChannelConfigForChannelCount(codecpar->channels));
-
+#else
+    uint64_t channelLayout = 0;
+    if (codecpar->ch_layout.order == AV_CHANNEL_ORDER_NATIVE)
+        channelLayout = codecpar->ch_layout.u.mask;
+    else
+        channelLayout = avChannelLayout(QAudioFormat::defaultChannelConfigForChannelCount(codecpar->ch_layout.nb_channels));
+#endif
     format.setChannelConfig(channelConfigForAVLayout(channelLayout));
     return format;
 }
