src/plugins/multimedia/ffmpeg/qffmpegresampler.cpp
@@ -31,11 +31,12 @@ Resampler::Resampler(const Codec *codec, const QAudioFormat &outputFormat)
     if (config == QAudioFormat::ChannelConfigUnknown)
         config = QAudioFormat::defaultChannelConfigForChannelCount(m_outputFormat.channelCount());
 
+
+    qCDebug(qLcResampler) << "init resampler" << m_outputFormat.sampleRate() << config << codecpar->sample_rate;
+#if QT_FFMPEG_OLD_CHANNEL_LAYOUT
     auto inConfig = codecpar->channel_layout;
     if (inConfig == 0)
         inConfig = QFFmpegMediaFormatInfo::avChannelLayout(QAudioFormat::defaultChannelConfigForChannelCount(codecpar->channels));
-
-    qCDebug(qLcResampler) << "init resampler" << m_outputFormat.sampleRate() << config << codecpar->sample_rate;
     resampler = swr_alloc_set_opts(nullptr,  // we're allocating a new context
                                    QFFmpegMediaFormatInfo::avChannelLayout(config),  // out_ch_layout
                                    QFFmpegMediaFormatInfo::avSampleFormat(m_outputFormat.sampleFormat()),    // out_sample_fmt
@@ -45,7 +46,20 @@ Resampler::Resampler(const Codec *codec, const QAudioFormat &outputFormat)
                                    codecpar->sample_rate,                // in_sample_rate
                                    0,                    // log_offset
                                    nullptr);
-
+#else
+    AVChannelLayout in_ch_layout = codecpar->ch_layout;
+    AVChannelLayout out_ch_layout = {};
+    av_channel_layout_from_mask(&out_ch_layout, QFFmpegMediaFormatInfo::avChannelLayout(config));
+    swr_alloc_set_opts2(&resampler,  // we're allocating a new context
+                        &out_ch_layout,
+                        QFFmpegMediaFormatInfo::avSampleFormat(m_outputFormat.sampleFormat()),
+                        m_outputFormat.sampleRate(),
+                        &in_ch_layout,
+                        AVSampleFormat(codecpar->format),
+                        codecpar->sample_rate,
+                        0,
+                        nullptr);
+#endif
     // if we're not the master clock, we might need to handle clock adjustments, initialize for that
     av_opt_set_double(resampler, "async", m_outputFormat.sampleRate()/50, 0);
 
